--- a/templates/bloco_cirurgico.html
+++ b/templates/bloco_cirurgico.html
@@ -1006,7 +1006,7 @@
                 .then(data => {
                     if (data.selected_pdf) {
                         pdfSelector.value = data.selected_pdf;
-                        pdfFrame.src = `http://192.168.1.25:5099/pdfs/${data.selected_pdf}`; // Ajuste o caminho conforme necessário
+                        pdfFrame.src = `http://192.168.1.25:5099/bloco_cirurgico/${data.selected_pdf}`; // Ajuste o caminho conforme necessário
                     }
                 })
                 .catch(error => console.error('Erro ao carregar a seleção do PDF:', error));
@@ -1039,7 +1039,7 @@
                 .catch(error => console.error('Erro ao salvar a seleção do PDF:', error));
 
                 // Atualizar o iframe com o PDF selecionado
-                pdfFrame.src = `http://192.168.1.25:5099/pdfs/${selectedPdf}`;  // Ajuste o caminho conforme necessário
+                pdfFrame.src = `http://192.168.1.25:5099/bloco_cirurgico/${selectedPdf}`;  // Ajuste o caminho conforme necessário
             });
         });
     });
