Adição de rotas e links

--- a/templates/index.html
+++ b/templates/index.html
@@ -85,22 +85,19 @@
                             <a href="/farmacia" class="a-pop link" target="_blank">Pop's Farmácia</a>
                         </div>
                         <div class="link-pop">
-                            <a href="/medicacoes" class="a-pop link" target="_blank">Pop's Medicações</a>
+                            <a href="/ccih" class="a-pop link" target="_blank">Pop's CCIH</a>
                         </div>
                         <div class="link-pop">
-                            <a href="/bloco_cirurgico" class="a-pop link" target="_blank">Pop's Bloco Cirúrgico (BC)</a>
+                            <a href="/servico_social" class="a-pop link" target="_blank">Pop's Serviço Social</a>
                         </div>
                         <div class="link-pop">
-                            <a href="/cme" class="a-pop link" target="_blank">Pop's Centro de Material Esterelizado (CME)</a>
+                            <a href="/higienizacao" class="a-pop link" target="_blank">Pop's Higienização</a>
                         </div>
                         <div class="link-pop">
-                            <a href="/hemoterapia" class="a-pop link" target="_blank">Pop's Hemoterapia</a>
+                            <a href="/laboratorio" class="a-pop link" target="_blank">Pop's Laboratório Vitae</a>
                         </div>
                         <div class="link-pop">
-                            <a href="/limpeza_desinfeccao" class="a-pop link" target="_blank">Pop's Limpeza e Desinfecção</a>
-                        </div>
-                        <div class="link-pop">
-                            <a href="/funcao_respiratoria" class="a-pop link" target="_blank">Pop's Função Respiratória</a>
+                            <a href="/pscicologia" class="a-pop link" target="_blank">Pop's Pscicologia Hospitalar</a>
                         </div>
                     </div> 
 
