Atualização de POP's

--- a/templates/pscicologia.html
+++ b/templates/pscicologia.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Start your development with Meyawo landing page.">
     <meta name="author" content="Devcrud">
-    <title>Pop's CCIH</title>
+    <title>Pop's Pscicologia</title>
     <!-- font icons -->
     <link rel="stylesheet" href="static/assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Meyawo main styles -->
@@ -46,34 +46,37 @@
             <div>
                 <ul>
                     <li class="item">
-                        <a class="link" href="#section-229">SMS CCIH 01 Política de utilização de Antimicrobianos</a>
+                        <a class="link" href="#section-337">SMS PSIH 01 COVID-19</a>
                     </li>
                     <li class="item">
-                        <a class="link" href="#section-230">SMS CCIH 02 Antibiótico profilaxia cirúrgica</a>
+                        <a class="link" href="#section-338">SMS PSIH 02 TAE</a>
                     </li>
                     <li class="item">
-                        <a class="link" href="#section-231">SMS CCIH 03 Auditoria de ATB</a>
+                        <a class="link" href="#section-339">SMS PSIH 03 Demandas Clínicas</a>
                     </li>
                     <li class="item">
-                        <a class="link" href="#section-232">SMS CCIH 04 Medidas de Precaução e Isolamento</a>
+                        <a class="link" href="#section-340">SMS PSIH 04 Violência (Criança e Adolescente)</a>
                     </li>
                     <li class="item">
-                        <a class="link" href="#section-233">SMS CCIH 05 Plano de enfrentamento da infecção pelo novo Coronavírus - SARS-CoV-2</a>
+                        <a class="link" href="#section-341">SMS PSIH 05 Violência (Mulher)</a>
                     </li>
                     <li class="item">
-                        <a class="link" href="#section-234">SMS CCIH 06 Limpeza e desenfecção de Brinquedos</a>
+                        <a class="link" href="#section-342">SMS PSIH 06 Familiares (Contexto de Visita/Comunicação a Pacientes Hospitalizados)</a>
                     </li>
                     <li class="item">
-                        <a class="link" href="#section-235">SMS CCIH 07 Fluxo de solicitação de antimicrobianos de uso restrito</a>
+                        <a class="link" href="#section-343">SMS PSIH 07 Gestantes em situação de (Aborto/Morte Fetal)</a>
                     </li>
                     <li class="item">
-                        <a class="link" href="#section-236">SMS CCIH 08 Limpeza e Desenfecção de Superfícies e Equipamentos</a>
+                        <a class="link" href="#section-344">SMS PSIH 08 Pré Parto e Puerperas</a>
                     </li>
                     <li class="item">
-                        <a class="link" href="#section-237">SMS CCIH 09 Troca de Dispositivos</a>
+                        <a class="link" href="#section-345">SMS PSIH 09 Sala de Urgência e Emergência</a>
                     </li>
                     <li class="item">
-                        <a class="link" href="#section-238">SMS CCIH 10 Protocolo de Sepse</a>
+                        <a class="link" href="#section-346">SMS PSIH 10 Triagem Pscicologia-PNH</a>
+                    </li>
+                    <li class="item">
+                        <a class="link" href="#section-347">SMS PSIH 10 Cuidados Paliativos</a>
                     </li>
                 </ul>
             </div>
@@ -82,10 +85,10 @@
 
     <!-- about section -->
      
-    <section class="section section-2" id="section-229" data-page="page5">
+    <section class="section section-2" id="section-337" data-page="page5">
         <div class="card card-conteudo card-conteudo-5 editable">
             <div style="display: flex;">
-                <h4>Política de utilização de Antimicrobianos</h4>
+                <h4>COVID-19</h4>
                 <div style="display: flex;" class="div-oculta">
                     <select class="form-select pdfSelector" id="pdfSelector172" style="margin-left: 100px; font-size: 14px; height: 25px;">
                         {% for pdf in pdfs %}
@@ -106,10 +109,12 @@
         </div>
     </section>
     
-    <section class="section section-2" id="section-230" data-page="page5">
+
+
+    <section class="section section-2" id="section-338" data-page="page5">
         <div class="card card-conteudo card-conteudo-5 editable">
             <div style="display: flex;">
-                <h4>Antibiótico profilaxia cirúrgica</h4>
+                <h4>TAE</h4>
                 <div style="display: flex;" class="div-oculta">
                     <select class="form-select pdfSelector" id="pdfSelector173" style="margin-left: 100px; font-size: 14px; height: 25px;">
                         {% for pdf in pdfs %}
@@ -131,10 +136,12 @@
         </div>
     </section>
     
-    <section class="section section-2" id="section-231" data-page="page5">
+
+
+    <section class="section section-2" id="section-339" data-page="page5">
         <div class="card card-conteudo card-conteudo-5 editable">
             <div style="display: flex;">
-                <h4>Auditoria de ATB</h4>
+                <h4>Demandas Clínicas</h4>
                 <div style="display: flex;" class="div-oculta">
                     <select class="form-select pdfSelector" id="pdfSelector174" style="margin-left: 100px; font-size: 14px; height: 25px;">
                         {% for pdf in pdfs %}
@@ -157,10 +164,10 @@
 
 
 
-    <section class="section section-2" id="section-232" data-page="page5">
+    <section class="section section-2" id="section-340" data-page="page5">
         <div class="card card-conteudo card-conteudo-5 editable">
             <div style="display: flex;">
-                <h4>Medidas de Precaução e Isolamento</h4>
+                <h4>Violência (Criança e Adolescente)</h4>
                 <div style="display: flex;" class="div-oculta">
                     <select class="form-select pdfSelector" id="pdfSelector175" style="margin-left: 100px; font-size: 14px; height: 25px;">
                         {% for pdf in pdfs %}
@@ -183,10 +190,10 @@
 
 
 
-    <section class="section section-2" id="section-233" data-page="page5">
+    <section class="section section-2" id="section-341" data-page="page5">
         <div class="card card-conteudo card-conteudo-5 editable">
             <div style="display: flex;">
-                <h4>Plano de enfrentamento da infecção pelo novo Coronavírus - SARS-CoV-2</h4>
+                <h4>Violência (Mulher)</h4>
                 <div style="display: flex;" class="div-oculta">
                     <select class="form-select pdfSelector" id="pdfSelector176" style="margin-left: 100px; font-size: 14px; height: 25px;">
                         {% for pdf in pdfs %}
@@ -209,10 +216,10 @@
 
 
 
-    <section class="section section-2" id="section-234" data-page="page5">
+    <section class="section section-2" id="section-342" data-page="page5">
         <div class="card card-conteudo card-conteudo-5 editable">
             <div style="display: flex;">
-                <h4>Limpeza e desenfecção de Brinquedos</h4>
+                <h4>Familiares (Contexto de Visita/Comunicação a Pacientes Hospitalizados)</h4>
                 <div style="display: flex;" class="div-oculta">
                     <select class="form-select pdfSelector" id="pdfSelector177" style="margin-left: 100px; font-size: 14px; height: 25px;">
                         {% for pdf in pdfs %}
@@ -235,10 +242,10 @@
 
 
 
-    <section class="section section-2" id="section-235" data-page="page5">
+    <section class="section section-2" id="section-343" data-page="page5">
         <div class="card card-conteudo card-conteudo-5 editable">
             <div style="display: flex;">
-                <h4>Fluxo de solicitação de antimicrobianos de uso restrito</h4>
+                <h4>Gestantes em situação de (Aborto/Morte Fetal)</h4>
                 <div style="display: flex;" class="div-oculta">
                     <select class="form-select pdfSelector" id="pdfSelector178" style="margin-left: 100px; font-size: 14px; height: 25px;">
                         {% for pdf in pdfs %}
@@ -262,10 +269,10 @@
 
 
 
-    <section class="section section-2" id="section-236" data-page="page5">
+    <section class="section section-2" id="section-344" data-page="page5">
         <div class="card card-conteudo card-conteudo-5 editable">
             <div style="display: flex;">
-                <h4>Limpeza e Desenfecção de Superfícies e Equipamentos</h4>
+                <h4>Pré Parto e Puerperas</h4>
                 <div style="display: flex;" class="div-oculta">
                     <select class="form-select pdfSelector" id="pdfSelector179" style="margin-left: 100px; font-size: 14px; height: 25px;">
                         {% for pdf in pdfs %}
@@ -289,10 +296,10 @@
 
 
 
-    <section class="section section-2" id="section-237" data-page="page5">
+    <section class="section section-2" id="section-345" data-page="page5">
         <div class="card card-conteudo card-conteudo-5 editable">
             <div style="display: flex;">
-                <h4>Troca de Dispositivos</h4>
+                <h4>Sala de Urgência e Emergência</h4>
                 <div style="display: flex;" class="div-oculta">
                     <select class="form-select pdfSelector" id="pdfSelector180" style="margin-left: 100px; font-size: 14px; height: 25px;">
                         {% for pdf in pdfs %}
@@ -315,10 +322,36 @@
 
 
 
-    <section class="section section-2" id="section-238" data-page="page5">
+    <section class="section section-2" id="section-346" data-page="page5">
         <div class="card card-conteudo card-conteudo-5 editable">
             <div style="display: flex;">
-                <h4>Protocolo de Sepse</h4>
+                <h4>Triagem Pscicologia-PNH</h4>
+                <div style="display: flex;" class="div-oculta">
+                    <select class="form-select pdfSelector" id="pdfSelector180" style="margin-left: 100px; font-size: 14px; height: 25px;">
+                        {% for pdf in pdfs %}
+                            <option value="{{ pdf }}">{{ pdf }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+                <a class="link" href="#home" style="margin-left: auto;">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-caret-up-fill" viewBox="0 0 16 16">
+                        <path d="m7.247 4.86-4.796 5.481c-.566.647-.106 1.659.753 1.659h9.592a1 1 0 0 0 .753-1.659l-4.796-5.48a1 1 0 0 0-1.506 0z"/>
+                    </svg>
+                </a>
+            </div>
+            
+            <div id="pdfViewer" style="margin-top: 20px;">
+                <iframe class="pdfFrame" id="pdfFrame180" style="width: 100%; height: 700px;" frameborder="0"></iframe>
+            </div>
+        </div>
+    </section>
+
+
+
+    <section class="section section-2" id="section-347" data-page="page5">
+        <div class="card card-conteudo card-conteudo-5 editable">
+            <div style="display: flex;">
+                <h4>Cuidados Paliativos</h4>
                 <div style="display: flex;" class="div-oculta">
                     <select class="form-select pdfSelector" id="pdfSelector180" style="margin-left: 100px; font-size: 14px; height: 25px;">
                         {% for pdf in pdfs %}
@@ -427,7 +460,7 @@
                 .then(data => {
                     if (data.selected_pdf) {
                         pdfSelector.value = data.selected_pdf;
-                        pdfFrame.src = `http://192.168.1.25:5099/ccih/${data.selected_pdf}`; // Ajuste o caminho conforme necessário
+                        pdfFrame.src = `http://192.168.1.25:5099/pscicologia/${data.selected_pdf}`; // Ajuste o caminho conforme necessário
                     }
                 })
                 .catch(error => console.error('Erro ao carregar a seleção do PDF:', error));
@@ -460,7 +493,7 @@
                 .catch(error => console.error('Erro ao salvar a seleção do PDF:', error));
 
                 // Atualizar o iframe com o PDF selecionado
-                pdfFrame.src = `http://192.168.1.25:5099/ccih/${selectedPdf}`;  // Ajuste o caminho conforme necessário
+                pdfFrame.src = `http://192.168.1.25:5099/pscicologia/${selectedPdf}`;  // Ajuste o caminho conforme necessário
             });
         });
     });
